--- a/jsArrayMethods.html
+++ b/jsArrayMethods.html
@@ -13,13 +13,13 @@
     <li>a.shift()</li>
     <li>a.sort()</li>
     <li>a.reverse()</li>
-    <li>a.splice(start,end)</li>
+    <li>a.splice(start, count_to_del, item1, item2, ...)</li>
 </ul>
 
 <h3>Return new array</h3>
 <ul>
     <li>arr1.concat(arr2, arr3)</li>
-    <li>a.slice(start, count_to_del, item1, item2, ...)</li>
+    <li>a.slice(start, end)</li>
     <li>a.filter()</li>
     <li>a.map()</li>
 </ul>
