--- a/jsArrayMethods.html
+++ b/jsArrayMethods.html
@@ -20,8 +20,8 @@
 <ul>
     <li>arr1.concat(arr2, arr3)</li>
     <li>a.slice(start, end)</li>
-    <li>a.filter()</li>
-    <li>a.map()</li>
+    <li>a.filter(callback)</li>
+    <li>a.map(callback)</li>
 </ul>
 
 <h3>Return true/false</h3>
