--- a/jsNumbers.html
+++ b/jsNumbers.html
@@ -3,7 +3,7 @@
     
     //both number assignment: 15
     x=15;   //number defined as decimal
-    x=0xf;  //number defined as hexadecimal
+    x=0xf;  //number defined as hexadecimal    //i.e. x=15;
 
     //number conversion-------------------------------------
     //radix: Must be an integer between 2 and 36.
