--- a/jsNumbers.html
+++ b/jsNumbers.html
@@ -27,30 +27,30 @@
     //decimal to hex
     x=15;
     const a = (x).toString(16);
-    console.log("dec (10) to hex: ", a);
+    console.log("dec (10) to hex: ", a);    //f
 
     //decimal to binary
     x=15;
     const c = (x).toString(2);
-    console.log("dec (10) to bin: ", c);
+    console.log("dec (10) to bin: ", c);    //1111
 
     //hex to decimal
     x='f';
     const b = parseInt(x, 16);
-    console.log("hex ('f') to dec: ", b);
+    console.log("hex ('f') to dec: ", b);    //15
 
     //bin to decimal
     x='1111';
     const d = parseInt(x, 2);
-    console.log("bin ('1111') to dec: ", d);
+    console.log("bin ('1111') to dec: ", d);    //15
 
     //Number rounding----------------------------------------
     let num=5.56789;
 
     let n1 = num.toFixed();
-    console.log("round number 5.56789: ", n1);
+    console.log("round number 5.56789: ", n1);    //6
 
     let n2 = num.toFixed(2);
-    console.log("round number 5.56789 to two desimal places: ", n2);
+    console.log("round number 5.56789 to two desimal places: ", n2);    //5.57
 
 </script>
