--- a/jsArrayOfObjectsMethods.html
+++ b/jsArrayOfObjectsMethods.html
@@ -72,7 +72,7 @@
     console.log(p);
 
     //look for in all atributes:
-    //Use: Object.values()
+    //Use: Object.values().some()
         const persons = [
         {id: 1, fName: "Petr", lName: "Pavel", age: 25},
         {id: 2, fName: "Pavel", lName: "Starý", age: 20},
