--- a/jsRegexp.html
+++ b/jsRegexp.html
@@ -22,7 +22,7 @@
     //modifiers
     //.........
     i   case insensitive
-    g   global
+    g   global    //Význam pouze u string.match() a string.replace(). Pro string.search() nemá smysl.
 
     //quantifiers
     //..........
