--- a/jsRegexp.html
+++ b/jsRegexp.html
@@ -14,6 +14,7 @@
     /.+/  1-∞ libov. znaků
     /\d/  číslice
     /\s/  white space (mezera, tabulátor, ...)
+    /\n/  new line
     /[abc]/   jakýkoli znak v závorkách
     /[a-d]/   a,b,c,d
     /[0-5]/   0-5
