--- a/jsRegexp.html
+++ b/jsRegexp.html
@@ -57,8 +57,8 @@
     /aa/.exec("Nějaký string");    //vrací viz příklad
 
     //Příklady
-    /aa/.exec("xxaabbaadd");    //true
-    /cc/.exec("xxaabbaadd");    //false
+    /aa/.test("xxaabbaadd");    //true
+    /cc/.test("xxaabbaadd");    //false
     /aa/.exec("xxaabbaadd");    //['aa', index: 2, input: 'xxaaxx', groups: undefined]
 
     //Hledání v tabulkách - příklad: p2------------------------------------
